[package]
name = "stress_crab"
version = "0.1.0"
edition = "2024"

[dependencies]
allure = "0.0.1"
cargo-nextest = "0.9.92"
claims = "0.8.0"
clap = "4.5.32"
config-rs = "0.1.3"
dotenv = "0.15.0"
log = "0.4.27"
reqwest = { version = "0.12.15",features = ["json","cookies"] }
rstest = "0.25.0"
serde = "1.0.219"
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = "1.44.1"
tracing = "0.1.41"
